# objective_functions

./: .flake8  .gitlint  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md  task.md
.github/workflows/: linting.yaml  tests.yaml
benchmarks/: bounds.py  classical.py  functions_registry.py  geometric.py  goemetric.py  multimodal.py  nonlinear.py
examples/: benchmark_optimizers.py  plot_function.py
examples/optimizer_benchmark/: base.py  benchmark_runner.py  optimizers.py  printer.py
tests/: test_benchmark_example.py  test_functions_validity.py  test_plotting_feasibility.py
