[project]
name = "objective_functions"
version = "0.1.0"
description = "Objective functions lib"
authors = [
    {name = "RenatoFaraco",email = "renato.faraco.f@gmail.com"},
]
dependencies = [
    "numpy>=2.2.6",
    "matplotlib>=3.10.3"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "GNU General Public License v3.0 (GPL-3.0)"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pdm.scripts]
plot = "python examples/plot_function.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
