[project]
name = "objective_functions"
version = "0.1.0"
description = "Objective functions lib"
authors = [
    {name = "RenatoFaraco",email = "renato.faraco.f@gmail.com"},
]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.2",
    "tabulate>=0.9.0",
    "rich>=13.7.1",
    "matplotlib>=3.10.3"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "GNU General Public License v3.0 (GPL-3.0)"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 88

[tool.flake8]
enable-extensions = ["G"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pdm.scripts]
plot = "python examples/plot_function.py"
benchmark = "python examples/optimizer_benchmark/benchmark_runner.py"
lint_black = "black ."
lint_flake8 = "flake8 ."
lint_pylint = "pylint benchmarks examples tests"
lint_gitlint = "gitlint --commit HEAD"
lint_check = {composite = ["lint_black", "lint_flake8"]}

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pylint>=3.3.7",
    "pre-commit>=4.2.0",
    "gitlint>=0.19.1",
]
